syntax = "proto3";

package org.project_planton.provider.gcp.gcpgkeaddonbundle.v1;

import "buf/validate/validate.proto";
import "org/project-planton/provider/gcp/gcpgkeaddonbundle/v1/spec.proto";
import "org/project-planton/provider/gcp/gcpgkeaddonbundle/v1/stack_outputs.proto";
import "org/project-planton/shared/metadata.proto";

//gcp-gke-addon-bundle
message GcpGkeAddonBundle {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'gcp.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'GcpGkeAddonBundle'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  GcpGkeAddonBundleSpec spec = 4 [(buf.validate.field).required = true];

  //status
  GcpGkeAddonBundleStatus status = 5;
}

//gcp-gke-addon-bundle status.
message GcpGkeAddonBundleStatus {
  //stack-outputs
  GcpGkeAddonBundleStackOutputs outputs = 1;
}
